--- a/qml/html/style.css
+++ b/qml/html/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color:grey;
+    background-color:lightgrey;
 }
 
 
@@ -58,13 +58,14 @@ h1 {
 
 #winH1{
     display: none;
-    font-size: 2rem;
+    position:absolute;
+    top:20px;
+    left:20px;
+    font-size: 2.5rem;
     text-align: center;
     color: #fcedd8;
-    /*font-family: "Niconne", cursive; */
     font-weight: 700;
-    /*text-shadow: 5px 5px 0 #eb452b, 10px 10px 0 #efa032, 15px 15px 0 #46b59b,
-    20px 20px 0 #017e7f, 25px 25px 0 #052939, 30px 30px 0 #c11a2b;*/
+    text-shadow: 5px 5px 0 #eb452b, 10px 10px 0 #efa032; 
 }
 
 label{
@@ -74,10 +75,12 @@ label{
 
 
 input[type='text']{
+
     background-color: #56629D;
     height: 7vw;
     width: 7vw;
-    font-size: 4vw;
+    font-size: 5vw;
+    font-weight:800;
     text-align: center;
     padding:1vw;
     border-radius:5px;
@@ -145,6 +148,7 @@ input[type='text']{
 .container {
     width: 100%; 
     height: 100%;
+    margin-top:30px;
     
 }
 
