--- a/qml/html/style.css
+++ b/qml/html/style.css
@@ -80,7 +80,7 @@ input[type='text']{
     height: 7vw;
     width: 7vw;
     font-size: 5vw;
-    font-weight:800;
+    font-weight:bold;
     text-align: center;
     padding:1vw;
     border-radius:5px;
